--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ background: linear-gradient(90deg, rgba(47,59,47,1) 0%, rgba(255,249,239,1) 30%,
 	<nav></nav>
 	<header>
 		<div class="wrap">
-			<h1 class="center-spacing">[단독]"고봉민, 비켜!"<br> 김밥왕 최모씨 등장;</h1>
+			<h1 class="center-spacing">[단독]"고봉민, 비켜!"<br> 김밥왕 최모씨 등장.</h1>
 			<p class="no-margin center-spacing">애순이의 김밥</p>
 		</div>
 	</header>
@@ -153,7 +153,7 @@ background: linear-gradient(90deg, rgba(47,59,47,1) 0%, rgba(255,249,239,1) 30%,
 			<img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExejB1eGJxb3h6MWczaDAydDNwaHI3czVrbTFxbnlyeDRzcWwyb2dsYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/UWPdG90fozR9fR8jcO/giphy.gif">
 			<p>이렇게...</p>
 			<img src="gimbab22.jpg">
-			<p>10줄.. 말았다.. 진짜 힘들었다. <br>중간에 잘린거는 김밥 말다가 기운빠져서 통째로 쳐먹은 흔적이다. 이거 국룰 아닌가요</p>
+			<p>10줄.. 말았다.. 진짜 힘들었다. <br>중간에 잘린거는 김밥 말다가 기운빠져서 통째로 베어먹은 흔적이다. 이거 국룰 아닌가요</p>
 			<img src="gimbab21.jpg">
 			<p class="no-margin">진짜 귀엽죵<br>당근 넣기 싫어서 안넣었더니 색이 좀 단조로움.. <br>당근씨, 당신의 비비드한 주황색이 필요해..근데존맛짱맛이었음</p>
 		</div>
@@ -185,7 +185,7 @@ background: linear-gradient(90deg, rgba(47,59,47,1) 0%, rgba(255,249,239,1) 30%,
 			<p class="gliter ">엄빠 다 T인듯.. </p>
 			<h3 class="italicpink"; class="center-spacing"> 무조건적인 칭찬과 공감 부탁드려요(합장티콘)</h3>
 			<p class="gliter">엄마 김밥이 먹고싶어서 만들었다는 소리는 못했다. 폭싹 속았수다 드라마를 보고 센치해져서 엄마아빠가 보고싶어졌다는 소리인걸 알아챌까 봐서.<br> 씩씩한 대학교 3학년인걸~ 혼자서도 잘 해먹고 잘 살아야 겠다.</p>
-			<footer>내 방은 좁고, 깔고 싶은 러그는 많아.&copy;2025 최종민 모든 권리보유.</footer>
+			<footer>[단독]"고봉민, 비켜!" 김밥왕 최모씨 등장.&copy;2025 최종민 모든 권리보유.</footer>
 		</div>
 	</section>
 		</body>
