--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ background: linear-gradient(90deg, rgba(47,59,47,1) 0%, rgba(255,249,239,1) 30%,
 		<div class="wrap">
 			<h1 class="center-spacing">[단독]"고봉민, 비켜!"<br> 김밥왕 최모씨 등장.</h1>
 			<p class="no-margin center-spacing">애순이의 김밥</p>
+			<iframe width="800" height="25" src="https://www.youtube.com/embed/prTlJcipGbo" title="김밥 (Gimbap)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</div>
 	</header>
 	<section class="bg1">
